# mlplayer

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL  README  TODO
.vim/: ide.vim
debian/: changelog  control  copyright
medialib/: CMakeLists.txt  CMakeProjectFiles.txt  paths.cpp  paths.hpp  subtitles.cpp  subtitles.hpp  subtitles.hxx
mlplayer/: CMakeLists.txt  CMakeProjectFiles.txt  common.hpp  config.hpp.in  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  mlplayer.desktop.in  player.cpp  player.hpp  player_private.hpp  subtitles.cpp  subtitles.hpp  subtitles_view.cpp  subtitles_view.hpp  subtitles_view.hxx  subtitles_viewport.cpp  subtitles_viewport.hpp
mlplayer/.vim/: ide.vim
mlplayer/player/: video.cpp  video.hpp  video.hxx
mlplayer/subtitles_viewport/: subtitles_view.cpp  subtitles_view.hpp  subtitles_view.hxx
