cmake_minimum_required(VERSION 2.6)

project(MEDIALIB)
include(CMakeProjectFiles.txt)

QT4_WRAP_CPP(MEDIALIB_MOC_CPP ${MEDIALIB_MOC_SOURCES})
QT4_WRAP_UI(MEDIALIB_UI_CPP ${MEDIALIB_UIS})

QT4_ADD_TRANSLATION(MEDIALIB_QM ${MEDIALIB_TRANSLATIONS})
# TODO
#install(FILES ${MEDIALIB_QM} DESTINATION ${MEDIALIB_APP_TRANSLATIONS_DIR})

add_library(medialib STATIC
	${MEDIALIB_SOURCES}
	${MEDIALIB_MOC_CPP}
	${MEDIALIB_QM}
	${MEDIALIB_UI_CPP}
)
